src/modules/commando/skin/commando.less
@import url("chrome://komodo/skin/global/colors.less");
@import url("resource://profile/colors.less");
@import url("chrome://komodo/skin/global/mixins.less");

#commando-panel
{
    border: 0;
    background: @special;
    color: @foreground-special;
    -moz-box-orient: horizontal;
    border-radius: 5px;
    
    label,
    description
    {
        font-size: 1rem !important;
    }

    &.blocked
    {
        & > *
        {
            opacity: 0.4;
        }
    }
    
    &.previewing:not(.maximized) #commando-preview
    {
        background: @special;
        width: 600px;
        border-left: 1px solid @contrast-special;
    }
    
    &.previewing.maximized #commando-preview
    {
        width: 600px;
    }
    
    #commando-panel-wrapper
    {
        width: 500px;
        transition: visibility 10ms; /* Hack to prevent XUL from hiding the commando panel apparently */
    }
    
    &.previewing #commando-panel-wrapper
    {
        width: 850px;
    }
    
    &.previewing:not(.maximized) #commando-results-outer
    {
        width: 250px;
    }
    
    &.previewing.maximized #commando-results-outer
    {
        visibility: collapse;
    }
    
    #commando-search-wrapper
    {
        background: @textbox-special;
        color: @textbox-foreground-special;
        border-top-right-radius: 2px;
        border-top-left-radius: 2px;
        height: 32px;
        
        textbox
        {
            background-color: transparent !important;
            -moz-appearance: none;
            border: 0;
            margin: 0;
            
            .textbox-input
            {
                color: @textbox-foreground-special;
                font-size: 1.4rem;
            }
        }
    }
    
    textbox, menulist
    {
        box-shadow: none !important;
    }

    #commando-subscope-wrap
    {
        visibility: collapse;
        font-weight: bold;
        padding: 4px;
        font-size: 1.1rem;
        background: @contrast-special;

        .icon
        {
            background-repeat: no-repeat;
            width: 16px;
            height: 16px;
            background-size: 16px;
            max-height: 16px;
            padding-top: 3px;
            margin-right: 4px;
        }

        description
        {
            margin: 0;
            padding: 0;
            padding-top: 2px;
        }
    }
    
    #commando-tip 
    {
        max-width: 500px;
        margin: 0;
        padding: 4px;
        background: @contrast-special;
        
        &[tip-type="error"]
        {
            color: #894343 !important;
        }
    }
    
    &.previewing #commando-tip
    {
        max-width: 240px;
    }
    
    .spinner
    {
        visibility: collapse;
        opacity: 0;
        transition: 0.2s ease-in-out opacity;
        .spinner(@contrast-special);
        width: 24px;
    }

    &.loading .spinner
    {
        visibility: visible;
        opacity: 1;
    }
    
    menulist#commando-scope
    {
        -moz-appearance: none;
        background-color: transparent !important;
        width: 40px;
        border: 0;
        margin: 0;

        & > .menulist-label-box
        {
            .menulist-label
            {
                visibility: collapse;
            }
            
            .menulist-icon
            {
                width: 16px;
            }
        }
        
        .menulist-dropmarker
        {
            display: none;
        }
        
        menuitem .menu-iconic-left
        {
            visibility: visible;
            display: inherit;
            -moz-margin-end: 4px !important; /* Whats wrong with `margin` mozilla? */
        }
    }

    richlistbox#commando-results
    {
        -moz-appearance: none;
        background: @special;
        border: 0;
        margin: 0;
        
        &:not(.has-results)
        {
            visibility: collapse;
        }

        scrollbox
        {
            overflow-x: hidden !important;
        }

        richlistitem
        {
            padding: 3px 4px 3px 10px;
            
            &[selected="true"]
            {
                color: @foreground-special;
                background: @contrast-special;
            }
            
            label, description
            {
                font-size: 1.1rem;
                line-height: 1.1rem;
            }
            
            .icon-wrapper
            {
                min-height: 1.5rem;
            }
            
            &:not(.small-icon)
            {
                .icon
                {
                    background-repeat: no-repeat;
                    width: 16px;
                    height: 16px;
                    max-height: 16px;
                    background-size: 16px 16px;
                }
            }
            
            &.small-icon
            {
                .icon
                {
                    background-repeat: no-repeat;
                    width: 14px;
                    height: 14px;
                    max-height: 14px;
                    background-size: 14px 14px;
                }
            }
            
            .number-wrapper
            {
                .number
                {
                    margin: 0 0 0 6px;
                    opacity: 0.6;
                }
            }

            .entry-wrapper
            {
                .title
                {
                    margin: 0 0 0 6px;
                    vertical-align: middle;
                }

                .descriptionPrefix
                {
                    font-style: italic;
                    max-width: 100px;
                    opacity: 0.7;
                    white-space: nowrap;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    margin: 0 0 0 6px;
                }

                .description
                {
                    opacity: 0.7;
                    margin: 0 0 0 6px;
                }
            }
            
            .entry-wrapper
            {
                &, .title, .descriptionPrefix, .description
                {
                    margin-top: 0;
                    margin-bottom: 0;
                    padding-top: 0;
                    padding-bottom: 0;
                    line-height: 1.1rem;
                    height: 1.1rem;
                }
            }
            
            &:not(.multiline) .entry-wrapper .descriptionPrefix .description
            {
                margin: 0 0 0 6px;
            }
            
            &.multiline .entry-wrapper .descriptionPrefix .description
            {
                margin: 0 6px 0 0;
            }
            
            &.multiline .entry-wrapper.multiline > .description
            {
                margin: 0;
                padding: 0;
            }
    
            &:not(.multiline) .entry-wrapper-outer
            {
                -moz-box-orient: horizontal;
            }
            
            &.multiline .entry-wrapper-outer
            {
                -moz-box-orient: vertical;
            }
        }

    }

    &.subscoped richlistitem
    {
        padding-left: 10px !important;
    }
}

#commando-search-quick
{
    -moz-appearance: none;
    padding: 2px;
    margin: 0;
    width: 200px;
    
    border-radius: 4px;
    cursor: text;
    
    &[placeholder="true"]
    {
        color: rgba(150,150,150,0.8);
    }
    
    &[open]
    {
        transition: all 0.1s;
        border-radius: 0;
        
        width: 480px;
    }
    
}

/* Notification Widget */

label[anonid="notification-widget-text"]
{
    cursor: text;
}

